Align sent and received messages correctly

--- a/src/components/ChatRoom/ChatRoom.scss
+++ b/src/components/ChatRoom/ChatRoom.scss
@@ -4,26 +4,39 @@
   flex-grow: 1;
   border: 1px solid var(--secondary-light-color);
   border-radius: 10px;
+  padding: 10px;
 
 
-  .message-position-container {
+  .message-container {
     width: 100%;
-    padding: 10px;
-    display: flex;
-    // justify-content: ;
+    margin-bottom: 10px;
 
-
-    .received-message {
-      background-color: var(--secondary-light-color);
-      border-radius: 10px;
-      color: #fff;
-      padding: 10px;
-      width: fit-content;
-      max-width: 50%;
+    .message-body {
+      margin: 0;
     }
+  }
 
-    .sent-message {
-      // justify-self: flex-end;
+  .received-message {
+    color: #fff;
+    display: flex;
+    justify-content: flex-start;
+    
+    .message-body {
+      padding: 10px;
+      border-radius: 10px;
+      background-color: var(--secondary-light-color);
+    }
+  }
+
+  .sent-message {
+    display: flex;
+    justify-content: flex-end;
+    
+    .message-body {
+      padding: 10px;
+      border-radius: 10px;
+      background-color: white;
+      margin: 0;
     }
   }
 }
